[package]
name = "api-cotyledon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
base64ct = { version = "1.4.1", features = ["alloc"] }
dotenv = "0.15.0"
fastrand = "1.7.0"